--- a/dreamstyle.css
+++ b/dreamstyle.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: 'Dreamer TM';
+  src: url('./dreamimages/Dreamer TM.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body, html, * {
+  font-family: 'Dreamer TM', sans-serif !important;
+  letter-spacing: 0.2em;
+}
 /* 全局样式 */
 
 @font-face {
